Possible whitespace fix

--- a/src/components/css/_index.scss
+++ b/src/components/css/_index.scss
@@ -24,4 +24,5 @@ h4 {
     overflow-y: hidden;
     margin: 0;
     padding: 0;
+    display: none;
 }
